--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -35,7 +35,11 @@
 			"tablet": true,
 			"phone": true
 		},
-		"supportedThemes": ["sap_hcb", "sap_bluecrystal", "sap_belize"]
+		"supportedThemes": [
+			"sap_hcb",
+			"sap_bluecrystal",
+			"sap_belize"
+		]
 	},
 	"sap.ui5": {
 		"_version": "1.2.0",
@@ -78,19 +82,31 @@
 				"controlId": "idAppControl",
 				"controlAggregation": "detailPages",
 				"bypassed": {
-					"target": ["master", "notFound"]
+					"target": [
+						"master",
+						"notFound"
+					]
 				},
 				"async": true
 			},
-			"routes": [{
-				"pattern": "",
-				"name": "master",
-				"target": ["object", "master"]
-			}, {
-				"pattern": "Folder/{objectId}",
-				"name": "object",
-				"target": ["master", "object"]
-			}],
+			"routes": [
+				{
+					"pattern": "",
+					"name": "master",
+					"target": [
+						"object",
+						"master"
+					]
+				},
+				{
+					"pattern": "Folder/{objectId}",
+					"name": "object",
+					"target": [
+						"master",
+						"object"
+					]
+				}
+			],
 			"targets": {
 				"master": {
 					"viewName": "Master",
@@ -118,10 +134,16 @@
 			}
 		},
 		"resources": {
-			"css": [{
-				"uri": "css/style.css",
-				"id": ""
-			}]
+			"css": [
+				{
+					"uri": "css/style.css",
+					"id": ""
+				}
+			]
 		}
+	},
+	"sap.platform.hcp": {
+		"uri": "webapp",
+		"_version": "1.1.0"
 	}
 }
