--- a/neo-app.json
+++ b/neo-app.json
@@ -48,5 +48,21 @@
       },
       "description": "ApplmanSrv"
     }
+  ],
+  "cacheControl": [
+    {
+      "directive": "private",
+      "maxAge": 0,
+      "path": "**.html"
+    },
+    {
+      "directive": "private",
+      "maxAge": 0,
+      "path": "sap-ui-cachebuster-info.json"
+    },
+    {
+      "directive": "public",
+      "maxAge": 31536000
+    }
   ]
 }
